remove npm test script

--- a/src/gallery-pathogen-encoder/package.json
+++ b/src/gallery-pathogen-encoder/package.json
@@ -35,8 +35,7 @@
         "mocha": "*"
     },
     "scripts": {
-        "lint": "node ./node_modules/.bin/jshint --config ./node_modules/yui-lint/jshint.json ./lib/*.js ./js/*.js",
-        "test": "node ./node_modules/.bin/_mocha tests/lib/*.js --reporter spec"
+        "lint": "./node_modules/jshint/bin/jshint --config ./node_modules/yui-lint/jshint.json ./lib/*.js ./js/*.js"
     },
     "repository": {
         "type": "git",
